--- a/Mini projektet/index.html
+++ b/Mini projektet/index.html
@@ -9,44 +9,45 @@
 </head>
 
 <body style="background-color:lightblue;">
-    <h2>Benny Andersson</h2>
-    <p>Hej, mitt namn är Benny. Bor i Häljarp utanför Landskrona.
-        Jag har sambo, två barn och en skällig hund.
-    </p>
+    <section>
+        <h2>Benny Andersson</h2>
+        <p>Hej, mitt namn är Benny. Bor i Häljarp utanför Landskrona.
+            Jag har sambo, två barn och en skällig hund.
+        </p>
+        <br>
+        <b> Bild på en skällig hund som heter Qelly:</b>
+        <br>
+        <img src="img/hund3.jpg" alt="VOV">
+        <br> <br> <br>
+    </section>
+
+    <hr color="red">
+    <hr color="red">
     <br>
-    <b> Bild på en skällig hund som heter Qelly:</b>
-    <br>
-    <img src="img/hund3.jpg" alt="VOV">
+    <section>
+        <h3>Ett av Bennys favoritcitat av Albert Einstein: </h3>
+        <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_737829">
+            <q>Life is like riding a bicycle. To keep your balance, you must keep moving.</q>
+        </blockquote>
+        Från <a
+            href="https://www.brainyquote.com/quotes/albert_einstein_737829">https://www.brainyquote.com/quotes/albert_einstein_737829</a>
+        :
+    </section>
+
     <br> <br> <br>
 
     <hr color="red">
     <hr color="red">
+    <section>
+        <b>En jättefin bild på Benny: </b>
+        <br>
+
+        <a href="img/benny.jpg">
+            <img alt="Qries" src="img/benny.jpg">
+        </a>
+
+    </section>
     <br>
-
-    <h3>Ett av Bennys favoritcitat av Albert Einstein: </h3>
-    <blockquote cite="https://www.brainyquote.com/quotes/albert_einstein_737829">
-        <q>Life is like riding a bicycle. To keep your balance, you must keep moving.</q>
-    </blockquote>
-    Från <a
-        href="https://www.brainyquote.com/quotes/albert_einstein_737829">https://www.brainyquote.com/quotes/albert_einstein_737829</a>
-    :
-
-    <br> <br> <br>
-
-    <hr color="red">
-    <hr color="red">
-
-    <b>En jättefin bild på Benny: </b>
-    <br>
-
-    <a href="img/benny.jpg">
-        <img alt="Qries" src="img/benny.jpg">
-    </a>
-
-
-    <br>
-
-    </footer>
 
     <footer>
         <ul>
@@ -61,4 +62,4 @@
 
 </body>
 
-</html> 
+</html>
