--- a/Mini projektet/contact.html
+++ b/Mini projektet/contact.html
@@ -11,42 +11,45 @@
 <body style="background-color:lightblue;">
     <H1>Kontaktformulär för att nå mig:</H1> <br> <br>
 
-    <form>
-        <label>Fyll i ditt för - och efternamn:</label>
-        <input type="text" required> 
-        <br>
-        <label>Fyll i ditt Telefonnummer:</label>
-        <input type="number" required>
-        <br>
-        <label>Fyll i din epost-adress:</label>
-        <input type="email" required>
-        <br>
-        <label>Vänligen förklara ditt ärende</label>
-        <input type="text" required>
-        <br>
-        <label>Välj din favoritfärg:</label>
-        <input type="color">
-        <br>
-        <label>När hade du önskat att jag kanske eventuellt kontaktar dig?:</label>
-        <input type="date" required>
-        <br>
-        <label>Om jag återkommer till dig, vilken tid hade passat bäst?:</label>
-        <input type="time" required>
-        <br> <br>
-        <label>Skriv något hemligt:</label>
-        <input type="password" required>
-        <br> <br>
-        <input type="reset"> <input type="submit">
+    <section>
+        <form>
+            <label>Fyll i ditt för - och efternamn:</label>
+            <input type="text" required>
+            <br>
+            <label>Fyll i ditt Telefonnummer:</label>
+            <input type="number" required>
+            <br>
+            <label>Fyll i din epost-adress:</label>
+            <input type="email" required>
+            <br>
+            <label>Vänligen förklara ditt ärende</label>
+            <input type="text" required>
+            <br>
+            <label>Välj din favoritfärg:</label>
+            <input type="color">
+            <br>
+            <label>När hade du önskat att jag kanske eventuellt kontaktar dig?:</label>
+            <input type="date" required>
+            <br>
+            <label>Om jag återkommer till dig, vilken tid hade passat bäst?:</label>
+            <input type="time" required>
+            <br> <br>
+            <label>Skriv något hemligt:</label>
+            <input type="password" required>
+            <br> <br>
+            <input type="reset"> <input type="submit">
 
+    </section>
 
+    <section>
         <p style="color:lightblue">Clara är bäst.</p>
-
+    </section>
     </form>
     <br>
 
     <footer>
-    <h3> <a href="index.html">Tillbaka till förstasidan</a> </h3>
-    <h3> <a href="inspiration.html">Till min egna sida med inspiration</a> </h3>
+        <h3> <a href="index.html">Tillbaka till förstasidan</a> </h3>
+        <h3> <a href="inspiration.html">Till min egna sida med inspiration</a> </h3>
     </footer>
 
 </body>
